--- a/servers/Vannihilation/plugins/LuckPerms/translations/zh_CN.properties
+++ b/servers/Vannihilation/plugins/LuckPerms/translations/zh_CN.properties
@@ -2,7 +2,7 @@ luckperms.logs.actionlog-prefix=日志
 luckperms.logs.verbose-prefix=VB
 luckperms.logs.export-prefix=导出
 luckperms.commandsystem.available-commands=使用 {0} 来查看可用的命令
-luckperms.commandsystem.command-not-recognised=未知的命令
+luckperms.commandsystem.command-not-recognised=未知命令
 luckperms.commandsystem.no-permission=您没有使用此命令的权限！
 luckperms.commandsystem.no-permission-subcommands=您没有使用任何子命令的权限！
 luckperms.commandsystem.already-executing-command=正在执行另一个命令，请等待完成...
@@ -126,7 +126,7 @@ luckperms.command.info.storage.meta.ping-key=延迟
 luckperms.command.info.storage.meta.connected-key=已连接
 luckperms.command.info.storage.meta.file-size-key=文件大小
 luckperms.command.info.extensions-key=扩展
-luckperms.command.info.messaging-key=聊天
+luckperms.command.info.messaging-key=消息服务
 luckperms.command.info.instance-key=实例
 luckperms.command.info.static-contexts-key=静态语境
 luckperms.command.info.online-players-key=在线玩家
